# TOPAY_Z512

./: .gitignore  DOCUMENTATION_FIXES_SUMMARY.md  DOCUMENTATION_SETUP_SUMMARY.md  DOCUMENTATION_WORKFLOW_FIXES.md  GITHUB_ACTIONS_SETUP.md  LICENSE  README.md  RUST_FIXES_SUMMARY.md  pitchdeck.txt  project-idea.md  test_import.go
.github/: markdown-link-check-config.json
.github/workflows/: benchmarks.yml  ci.yml  compatibility.yml  docs.yml  nightly.yml  quality.yml  release.yml  security.yml  test-tokens.yml
ci/: go.yml  js.yml  rust.yml
docs/: README.md  api_reference.md  design_spec.md  keypair.md
go/: README.md  fragment.go  go.mod  hash.go  kem.go  keypair.go  main.go  pool.go  simd.go  topayz512.go  topayz512_test.go
go/cmd/: main.go
go/docs/: index.html
go/examples/: README.md  hash_example.go  kem_example.go  keypair_example.go  main.go  private_to_public_example.go  time_hash.go  time_hash_example.go
go/examples/benchmark/: main.go
go/examples/fragmentation/: main.go
go/examples/interactive_guide/: main.go
go/examples/kem/: main.go
go/examples/keypair/: main.go
go/examples/quick_start/: main.go
go/pkg/hash/: hash.go  hash_test.go  hash_time_test.go
go/pkg/kem/: kem.go  kem_test.go
go/pkg/keypair/: keypair.go
js/: .eslintignore  .eslintrc.js  .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  typedoc.json  webpack.config.js
js/coverage/: clover.xml  coverage-final.json  lcov.info
js/coverage/lcov-report/: hash.ts.html  index.html  index.ts.html  kem.ts.html  keypair.ts.html
js/docs/: hierarchy.html  index.html  modules.html
js/docs/assets/: hierarchy.js  navigation.js  search.js
js/docs/classes/: DecapsulationFailedError.html  EmptyDataError.html  FragmentationFailedError.html  InvalidCiphertextSizeError.html  InvalidFragmentCountError.html  InvalidHashSizeError.html  InvalidKeySizeError.html  ReconstructionFailedError.html  TopayZ512Error.html
js/docs/functions/: backupKEMKeyPair.html  backupKeyPair.html  batchGenerateKeyPairs.html  batchHash.html  (+66 more)
js/examples/: hash_example.ts  kem_example.ts  keypair_example.ts  private-to-public-example.ts  time_hash_example.ts
js/src/: fragment.ts  hash.test.ts  hash.ts  hash_time.test.ts  index.ts  kem.test.ts  kem.ts  keypair.test.ts  keypair.ts  minimal.ts  optimized-performance.ts  performance.ts  tsconfig.json  utils.ts
rust/: Cargo.toml  OPTIMIZATION_SUMMARY.md  README.md
rust/benches/: kem_bench.rs
rust/examples/: fragmentation_example.rs  fragmented_key_exchange.rs  generate_keypair_test_vectors.rs  generate_test_vectors.rs  hash_example.rs  interactive_guide.rs  kem_example.rs  key_exchange.rs  keypair_example.rs  performance_benchmark.rs  private_to_public_example.rs  quick_start.rs  what_is_fragment.rs  what_is_kem.rs
rust/src/: error.rs  fragment.rs  hash.rs  kem.rs  keypair.rs  lib.rs  lwe.rs  params.rs  utils.rs
rust/tests/: integration_tests.rs
test-vectors/: 001_basic.json  002_hash.json  003_keypair.json
(+50 files in other folders)
