[package]
name = "topayz512"
version = "0.1.0"
edition = "2021"
authors = ["TOPAY FOUNDATION"]
description = "A 512-bit post-quantum cryptography library based on LWE"
license = "MIT"
repository = "https://github.com/topay-foundation/topayz512"
keywords = ["cryptography", "post-quantum", "kem", "lwe"]
categories = ["cryptography", "no-std"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
byteorder = "1.4"
zeroize = { version = "1.5", features = ["zeroize_derive"] }
thiserror = "1.0"
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.4"

[features]
default = ["std"]
std = []
fragmentation = []

[lib]
name = "topayz512"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]