[package]
name = "topayz512"
version = "0.1.0"
edition = "2021"
authors = ["TOPAY Foundation <contact@topayfoundation.com>"]
description = "TOPAY-Z512: Quantum-safe 512-bit post-quantum cryptographic library"
license = "Apache-2.0"
repository = "https://github.com/topay-foundation/topayz512"
keywords = ["cryptography", "post-quantum", "kem", "lattice", "blockchain"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = []
fragmentation = []

[dependencies]
# Using simpler dependencies to avoid linker issues
hex = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"

[lib]
name = "topayz512"
path = "src/lib.rs"

[[example]]
name = "hash_example"
path = "examples/hash_example.rs"

[[example]]
name = "kem_example"
path = "examples/kem_example.rs"

[[example]]
name = "keypair_example"
path = "examples/keypair_example.rs"